--- a/ZombieToys/Assembly-CSharp-vs.csproj
+++ b/ZombieToys/Assembly-CSharp-vs.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Scripts\Managers\ScoreManager.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerHealth.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerMovement2.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerShooting.cs" />
      <Compile Include="Assets\_CompletedAssets\MobileInput\Scripts\CrossPlatformInputManager.cs" />
      <Compile Include="Assets\_CompletedAssets\MobileInput\Scripts\Joystick.cs" />
